# Wingman

./: .env.example  .gitignore  README.md  backend_logs.txt  debug_logs.txt  docker-compose.test-stack.yml  docker-compose.yml  homelab_copilot_build_design_doc_for_ide.md  logging.compose.override.yml  ollama_models.txt  package-lock.json  package.json  tables.txt  test-embeddings.js  test-ollama.js  test_proxmox.py  test_proxmox_direct.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  collect_output.txt  conftest.py  create_tables.py  errors.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  test_failures.txt  test_results.txt  verify_phase4.py  verify_phase5.py
backend/alembic/: env.py
backend/app/: __init__.py
backend/homelab/: config.py  db_base.py  graph_service.py  main.py  scheduler.py
backend/prisma/: schema.prisma
backend/scripts/: cleanup-memory.ts  inspect-db.ts
backend/src/: index.ts
backend/tests/: debug_imports.py  error.txt  run_unrealized_verification.py  test_adapter_contracts.py  test_audit_chain.py  test_audit_logging.py  test_auth_oidc.py  test_auth_rbac.py  test_dashboard_components.py  test_dashboard_queries.py  test_dashboard_schema.py  test_e2e_happy_path.py  test_embedding_safety.py  test_execution_modes.py  test_executions_api.py  test_graph_service.py  test_health_simple.py  test_incident_memory.py  test_integration.py  test_integration_mode.py  test_modes_mock.py  test_plan_executor_plugins.py  test_plugin_loader.py  test_plugin_manifest.py  test_plugin_sandbox.py  test_skills.py  (+10 more)
(+1165 files in other folders)
