[project]
name = "homelab-copilot"
version = "0.1.0"
description = "Privacy-forward infrastructure copilot for homelabs"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Only collect test_*.py files, explicitly ignore debug scripts
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# collect_ignore is handled in conftest.py for better compatibility
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
